# CLI-Python

./: .coverage  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: storage.py
models/: __init__.py  admin.py  person.py  project.py  schemas.py  task.py  user.py
tests/: test_admin.py  test_cli.py  test_helpers.py  test_main.py  test_main_more.py  test_models.py  test_storage.py  test_storage_more.py
tests/tmp/test_admin_delete0/: data.json
tests/tmp/test_cli_add_user_and_project0/: data.json
tests/tmp/test_complete_and_assign0/: data.json
tests/tmp/test_handle_add_user_and_proje0/: data.json
tests/tmp/test_list_users_and_projects0/: data.json
tests/tmp/test_save_load_roundtrip0/: data.json
tests/tmp/test_storage_helpers0/d/: data.json
utils/: helpers.py
